--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,12 @@
    <body>
        <h1>Our Grocery Store</h1>
        <h2>Here are all the Items:</h2>
+       <button id="sort">Sort</button>
        <ul id="item-list">
        </ul>
 
        <h3>Add a new Item:</h3>
+    
        <form id="item-form">
            <label for="item-name">Name:</label>
            <input type="text" name="name" id="item-name"><br><br>
@@ -22,7 +24,9 @@
            <input type="submit" value="Create">
        </form>
 
-    
+       <script src="src/category.js" type="text/javascript"></script>
+       <script src="src/item.js" type="text/javascript"></script>
+       <script src="src/itemApi.js" type="text/javascript"></script>
        <script src="index.js" type="text/javascript"></script>
    </body>
 </html>
