--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,8 @@
            <input type="submit" value="Create">
        </form>
 
-    
+       <script src="src/item.js" type="text/javascript"></script>
+       <script src="src/itemApi.js" type="text/javascript"></script>
        <script src="index.js" type="text/javascript"></script>
    </body>
 </html>
