--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,7 @@
            <label for="item-price">Price:</label>
            <input type="number" name="price" id="item-price" min="0" step=".01"><br><br>
            <label for="cat-dropdown">Category:</label>
+           <input type="text" name="category" id="category-name">
            <select name="category_id" id="cat-dropdown">
 
            </select><br><br>
